--- a/Informe_Practica_ManuelOlguin.tex
+++ b/Informe_Practica_ManuelOlguin.tex
@@ -188,7 +188,7 @@ El trabajo realizado en SUR consistió en el diseño y posterior implementación
 
 NIC Chile Research Labs (en adelante, NICLabs)\cite{niclabs}, es el laboratorio de redes de la Facultad de Ciencias Físicas y Matemáticas de la Universidad de Chile. Fundado en 2007, sus principales áreas de investigación y desarrollo son protocolos de internet y seguridad informática.
 
-El trabajo detallado en el presente informe se desarrolló entre octubre y diciembre del año 2015, de manera presencial en las instalaciones del laboratorio ubicadas en Av. Blanco Encalada 1975, Santiago, Chile.
+El trabajo detallado en el presente informe se desarrolló entre Agosto y Octubre del año 2015, de manera presencial en las instalaciones del laboratorio ubicadas en Av. Blanco Encalada 1975, Santiago, Chile.
 
 \subsection{Equipo de Trabajo}
 
